<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="17dp">
            <ImageView
                android:id="@+id/image_storage"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:src="@drawable/frigorifico"/>
            <!--            tipo-->

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="20dp">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/typeStorage"
                        android:layout_marginEnd="5dp"
                        android:textStyle="bold"
                        android:textColor="@color/titleTextColor"/>
                    <TextView
                        android:id="@+id/type_storage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/secondaryTextColor"/>
                </LinearLayout>
                <!--            Nombre-->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nameStorage"
                        android:layout_marginEnd="5dp"
                        android:textStyle="bold"
                        android:textColor="@color/titleTextColor"/>
                    <TextView
                        android:id="@+id/name_storage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/secondaryTextColor"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nProds"
                        android:layout_marginEnd="5dp"
                        android:textStyle="bold"
                        android:textColor="@color/titleTextColor"/>
                    <TextView
                        android:id="@+id/num_prods"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/secondaryTextColor"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nTimedOut"
                        android:layout_marginEnd="5dp"
                        android:textStyle="bold"
                        android:textColor="@color/titleTextColor"/>
                    <TextView
                        android:id="@+id/timed_prods"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/secondaryTextColor"/>
                </LinearLayout>
            </LinearLayout>

    </LinearLayout>
    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>