<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="#EFEFEF">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbarDetailProd"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            app:menu="@menu/menu_detail_prod"
            app:title="@string/titleDetailProd"
            app:titleCentered="true" />

    </com.google.android.material.appbar.AppBarLayout>

    <FrameLayout
        android:id="@+id/frameLayout2"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="#B1B1B1"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

        <ImageView
            android:id="@+id/img_prod_imageview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:src="@drawable/ic_no_camera"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/delete_photo_prod_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|end"
            android:layout_margin="12dp"
            android:src="@drawable/ic_close" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/photo_prod_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="12dp"
            android:src="@drawable/ic_camera" />
    </FrameLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_prod_edittext_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        app:counterMaxLength="30"
        app:counterEnabled="true"
        android:hint="@string/nameProdDetail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout2"
        app:startIconDrawable="@drawable/ic_edit">

        <EditText
            android:id="@+id/name_prod_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/description_prod_edittext_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:counterMaxLength="100"
        app:counterEnabled="true"
        android:hint="@string/descriptionProdDetail"
        app:layout_constraintEnd_toEndOf="@+id/name_prod_edittext_layout"
        app:layout_constraintStart_toStartOf="@+id/name_prod_edittext_layout"
        app:layout_constraintTop_toBottomOf="@+id/name_prod_edittext_layout"
        app:startIconDrawable="@drawable/ic_edit">

        <EditText
            android:id="@+id/description_prod_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_weight="4"
        android:hint="@string/dateProdDetail"
        app:layout_constraintEnd_toEndOf="@+id/description_prod_edittext_layout"
        app:layout_constraintStart_toStartOf="@+id/description_prod_edittext_layout"
        app:layout_constraintTop_toBottomOf="@+id/description_prod_edittext_layout"
        app:startIconDrawable="@drawable/ic_calendar">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/date_prod_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center_vertical"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout4"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout4">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amountProdDetail"
            android:textColor="@color/black"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="20dp"
            tools:layout_editor_absoluteY="482dp" />


        <ImageButton
            android:id="@+id/button_subtract"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/subtract_button"
            android:src="@drawable/ic_subtract"
            tools:layout_editor_absoluteX="114dp"
            tools:layout_editor_absoluteY="463dp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/counter_textView"
            style="@style/TextAppearance.Material3.TitleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textStyle="normal"
            tools:layout_editor_absoluteX="166dp"
            tools:layout_editor_absoluteY="476dp" />

        <ImageButton
            android:id="@+id/button_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/step_button"
            android:src="@drawable/ic_button_add"
            tools:layout_editor_absoluteX="183dp"
            tools:layout_editor_absoluteY="462dp" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>